add baidu blabla.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
       })
     </script>
     <title>Raspberrymonitor by micusic</title>
-  </head>
+    <script type="text/javascript" name="baidu-tc-cerfication" src="http://apps.bdimg.com/cloudaapi/lightapp.js#20a87aad3664716b41e876d4b0109b0d"></script>
+    <script type="text/javascript">window.bd && bd._qdc && bd._qdc.init({app_id: 'ae0a8a6f457913c02a7bdc00'});</script>
+</head>
 
   <body>
     <a id="forkme_banner" href="https://github.com/micusic/raspberryMonitor">View on GitHub</a>
